# market_monitor

./: .gitignore  Pipfile  README.md  monitor_market.py  pyproject.toml  watch_tickers
market_monitor/services/: anomaly_detection.py  fibonacci_retracement.py  notifications.py  orchestrator.py  ticker_state.py  utilities.py
market_monitor/typing/: notifications.py
methods/: anomaly_detection.md  fibonacci_retracement.md
