[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["market_monitor"]

[project]
name = "market_monitor"
version = "0.0.1"
authors = [
  { name="anonymous" },
]
description = "montor the storck market"
readme = "README.md"
requires-python = "==3.13.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jorgeso/market_monitor"